--- a/sentinel-dashboard/src/main/webapp/resources/package.json
+++ b/sentinel-dashboard/src/main/webapp/resources/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "test": "echo no test case",
     "build": "gulp build",
-    "start": "gulp"
+    "start": "gulp",
+    "preinstall": "npx npm-force-resolutions"
+  },
+  "resolutions": {
+    "graceful-fs": "4.2.3"
   },
   "author": "x-cold <lxstart@outlook.com>",
   "license": "MIT",
