--- a/sentinel-demo/pom.xml
+++ b/sentinel-demo/pom.xml
@@ -13,6 +13,7 @@
     <name>sentinel-demo</name>
 
     <modules>
+        <module>sentinel-demo-example</module>
         <module>sentinel-demo-basic</module>
         <module>sentinel-demo-dynamic-file-rule</module>
         <module>sentinel-demo-rocketmq</module>
