--- a/sentinel-demo/sentinel-demo-example/pom.xml
+++ b/sentinel-demo/sentinel-demo-example/pom.xml
@@ -34,6 +34,12 @@
             <artifactId>sentinel-transport-simple-http</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.alibaba.csp</groupId>
+            <artifactId>sentinel-parameter-flow-control</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
             <version>${spring.boot.version}</version>
