--- a/sentinel-extension/pom.xml
+++ b/sentinel-extension/pom.xml
@@ -19,6 +19,7 @@
         <module>sentinel-datasource-redis</module>
         <module>sentinel-annotation-aspectj</module>
         <module>sentinel-parameter-flow-control</module>
+        <module>sentinel-user-parameter-flow-control</module>
         <module>sentinel-datasource-spring-cloud-config</module>
         <module>sentinel-datasource-consul</module>
         <module>sentinel-datasource-etcd</module>
